--- a/assets/base.css
+++ b/assets/base.css
@@ -1313,7 +1313,7 @@ button.shopify-payment-button__button--unbranded,
 .customer button,
 button.shopify-payment-button__button--unbranded {
   min-width: calc(12rem + var(--buttons-border-width) * 2);
-  min-height: calc(4.5rem + var(--buttons-border-width) * 2);
+  height: calc(3.8rem + var(--buttons-border-width) * 2);
 }
 
 .shopify-payment-button__button--branded {
