--- a/assets/component-newsletter.css
+++ b/assets/component-newsletter.css
@@ -11,7 +11,6 @@
   .newsletter-form {
     align-items: flex-start;
     margin: 0 auto;
-    max-width: 36rem;
   }
 }
 
@@ -42,14 +41,14 @@
   }
 }
 
-.newsletter-form__button {
+/* .newsletter-form__button {
   width: 4.4rem;
   margin: 0;
   right: var(--inputs-border-width);
   top: 0;
   height: 100%;
   z-index: 2;
-}
+} */
 
 .newsletter-form__button:focus-visible {
   box-shadow: 0 0 0 .3rem rgb(var(--color-background)),0 0 0 .4rem rgba(var(--color-foreground));
@@ -61,10 +60,10 @@
   background-color: rgb(var(--color-background));
 }
 
-.newsletter-form__button:not(:focus-visible):not(.focused) {
+/* .newsletter-form__button:not(:focus-visible):not(.focused) {
   box-shadow: inherit;
   background-color: inherit;
-}
+} */
 
 .newsletter-form__button .icon {
   width: 1.5rem;
