--- a/assets/newsletter-section.css
+++ b/assets/newsletter-section.css
@@ -30,21 +30,48 @@
 }
 
 .newsletter__wrapper .newsletter-form__field-wrapper {
-  max-width: 36rem;
+  display: grid;
+  grid-template-columns: 300px 120px;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 749px) {
+  .newsletter__wrapper .newsletter-form__field-wrapper {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+}
+
+.newsletter__wrapper .newsletter-form__field-wrapper .field {
+}
+@media screen and (max-width: 749px) {
+  .newsletter__wrapper .newsletter-form__field-wrapper .field {
+    max-width: 320px;
+  }
 }
 
 .newsletter-form__field-wrapper .newsletter-form__message {
   margin-top: 1.5rem;
 }
 
-.newsletter__button {
-  margin-top: 3rem;
-  width: fit-content;
+@media screen and (max-width: 749px) {
+  .newsletter-form__button {
+    width: fit-content;
+    margin: 0 auto;
+  }
 }
 
-@media screen and (min-width: 750px) {
+/* this is for the arrow button */
+/* .newsletter__button {
+  margin-top: 3rem;
+  width: fit-content;
+} */
+
+/* @media screen and (min-width: 750px) {
   .newsletter__button {
     flex-shrink: 0;
     margin: 0 0 0 1rem;
   }
-}
+} */
