--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -171,7 +171,7 @@
   text-align: center;
 }
 
-.newsletter-form__field-wrapper {
+.footer-block__newsletter .newsletter-form__field-wrapper {
   max-width: 36rem;
 }
 
